collator-network-stack.yml
AWSTemplateFormatVersion: 2010-09-09

Description: Collator cloud networking resources - targets eu-west-1

Parameters:
  RelaychainNodeP2pPort:
    Description: P2P port for the embedded relaychain node
    Type: Number
    Default: 33334

  CollatorP2pPort:
    Description: P2P port for the collator itself
    Type: Number
    Default: 33333

  CollatorHttpPort:
    Description: HTTP RPC port for the collator
    Type: Number
    Default: 1833

  CollatorWsPort:
    Description: WS RPC port for the collator
    Type: Number
    Default: 1933

Resources:
  CollatorSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${AWS::StackName}-collator-security-group
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - Description: !Sub ${AWS::StackName}-security-group-ingress-ssh
          CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22

        - Description: !Sub ${AWS::StackName}-security-group-ingress-collator-p2p
          CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: !Ref CollatorP2pPort
          ToPort: !Ref CollatorP2pPort

        - Description: !Sub ${AWS::StackName}-security-group-ingress-collator-http
          CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: !Ref CollatorHttpPort
          ToPort: !Ref CollatorHttpPort

        - Description: !Sub ${AWS::StackName}-security-group-ingress-collator-ws
          CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: !Ref CollatorWsPort
          ToPort: !Ref CollatorWsPort

        - Description: !Sub ${AWS::StackName}-security-group-ingress-embedded-relayer-p2p
          CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: !Ref RelaychainNodeP2pPort
          ToPort: !Ref RelaychainNodeP2pPort

      SecurityGroupEgress:
        - Description: !Sub ${AWS::StackName}-security-group-egress-all
          CidrIp: 0.0.0.0/0
          IpProtocol: "-1"
          FromPort: 0
          ToPort: 0

  CollatorTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      TargetType: ip
      Port: 22
      Protocol: TCP
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 10
      HealthCheckPort: 22
      HealthCheckProtocol: TCP
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 3
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 60
      VpcId: !ImportValue VpcId

  CollatorNetworkLoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref CollatorTargetGroup
      LoadBalancerArn: !ImportValue NetworkLoadBalancerArn
      Port: 22
      Protocol: TCP

  MountTargetSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Ref: VPC
      GroupDescription: !Sub ${AWS::StackName}-mount-target-security-group
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '2049'
        ToPort: '2049'
        CidrIp: 0.0.0.0/0

Outputs:
  CollatorTargetGroupArn:
    Description: Target group id of the collators
    Value: !Ref CollatorTargetGroup
    Export:
      Name: CollatorTargetGroupArn

  CollatorSecurityGroupId:
    Description: Security group for the collator nodes
    Value: !Ref CollatorSecurityGroup
    Export:
      Name: CollatorSecurityGroupId

  MountTargetSecurityGroupId:
    Description:
    Value: !Ref MountTargetSecurityGroup
    Export:
      Name: CollatorMountTargetSecurityGroupId
